[gd_scene load_steps=4 format=2]

[ext_resource path="res://ball.gd" type="Script" id=1]
[ext_resource path="res://sphere.png" type="Texture" id=2]
[ext_resource path="res://ball.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]

[node name="panel1" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 600.0

[node name="sphere1" type="Sprite" parent="."]
position = Vector2( 0, 250 )
texture = ExtResource( 2 )

[node name="sphere2" type="Sprite" parent="."]
position = Vector2( 100, 250 )
texture = ExtResource( 2 )

[node name="sphere3" type="Sprite" parent="."]
position = Vector2( 250, 500 )
texture = ExtResource( 2 )

[node name="sphere4" type="Sprite" parent="."]
position = Vector2( 400, 325 )
texture = ExtResource( 2 )

[node name="sphere5" type="Sprite" parent="."]
position = Vector2( 550, 100 )
texture = ExtResource( 2 )

[node name="ball" type="Sprite" parent="."]
position = Vector2( 0, 250 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="panel2" type="Panel" parent="."]
margin_top = 600.0
margin_right = 600.0
margin_bottom = 700.0

[node name="arc" type="Label" parent="."]
margin_left = 235.0
margin_top = 573.0
margin_right = 355.0
margin_bottom = 608.0

[node name="Button" type="Button" parent="."]
margin_left = 36.0
margin_top = 628.0
margin_right = 139.0
margin_bottom = 672.0
text = "Toggle Splines"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 427.0
margin_top = 653.0
margin_right = 561.0
margin_bottom = 669.0
max_value = 300.0
value = 100.0

[node name="spline" type="Label" parent="."]
margin_left = 71.0
margin_top = 678.0
margin_right = 111.0
margin_bottom = 692.0
text = "Hermit"

[node name="speed" type="Label" parent="."]
margin_left = 479.0
margin_top = 675.0
margin_right = 519.0
margin_bottom = 689.0
text = "100"

[node name="Label" type="Label" parent="."]
margin_left = 327.0
margin_top = 653.0
margin_right = 409.0
margin_bottom = 667.0
text = "Spline Speed"

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 426.0
margin_top = 606.0
margin_right = 564.0
margin_bottom = 622.0
max_value = 1000.0
value = 100.0

[node name="Label2" type="Label" parent="."]
margin_left = 333.0
margin_top = 608.0
margin_right = 400.0
margin_bottom = 622.0
text = "Ball Speed"

[node name="movement_speed" type="Label" parent="."]
margin_left = 480.0
margin_top = 627.0
margin_right = 520.0
margin_bottom = 641.0
text = "100"

[connection signal="pressed" from="Button" to="ball" method="_on_Button_pressed"]
[connection signal="value_changed" from="HSlider" to="ball" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="ball" method="_on_HSlider2_value_changed"]
